# bifrost-hass

./: Cargo.toml  Dockerfile  README.md  frontend
.github/workflows/: docker-publish.yml  rust.yml
crates/bifrost-api/: Cargo.toml
crates/bifrost-api/src/: backend.rs  client.rs  config.rs  lib.rs  logging.rs  websocket.rs
crates/bifrost-frontend/: .gitignore  Cargo.toml  Dioxus.toml  Makefile  input.css  package-lock.json  package.json
crates/bifrost-frontend/assets/: tailwind.css  theme-dark-dracula.css
crates/bifrost-frontend/src/: grommet_icons.rs  hue_client.rs  hue_icons.rs  icons.rs  lib.rs  state.rs  toast.rs  traits.rs
crates/bifrost-frontend/src/component/: backends.rs  brightness.rs  button.rs  colortemp.rs  config.rs  enable_input.rs  group.rs  groups.rs  light.rs  light_details.rs  lights.rs  logs.rs  markup.rs  mod.rs  resources.rs  service.rs  z2m.rs
crates/bifrost-frontend/src/daisyui/: badge.rs  card.rs  mod.rs
crates/bifrost-frontend/src/page/: footer.rs  mod.rs  sidebar.rs
crates/ddp/: Cargo.toml
crates/ddp/src/: api.rs  lib.rs  sequence.rs
crates/hue/src/: colorspace.rs  devicedb.rs  event.rs  legacy_api.rs  stream.rs
crates/hue/src/api/: ext.rs  grouped_light.rs  light.rs  mod.rs  scene.rs  stubs.rs
crates/svc/src/: manager.rs
crates/wled/src/: api.rs  serde_util.rs
crates/z2m/src/: convert.rs
deploy/: docker-compose.ghcr.yaml
doc/: comparison-with-diyhue.md  config-reference.md  hue-api-structure.md
examples/: wsparse.rs
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  resource.rs
src/backend/hass/: backend_event.rs  client.rs  import.rs  mod.rs
src/backend/wled/: backend_event.rs  mod.rs
src/backend/z2m/: backend_event.rs  bridge_import.rs  entertainment.rs  mod.rs  websocket.rs
src/model/: hass.rs  state.rs
src/routes/: api.rs  frontend.rs  mod.rs
src/routes/bifrost/: backend.rs  hass.rs  mod.rs  websocket.rs
src/server/: appstate.rs
ui/src/: App.tsx  index.css
ui/src/components/: EntityRow.tsx
ui/src/lib/: types.ts
ui/src/pages/: AboutPage.tsx  AdvancedPage.tsx  BridgePage.tsx  EntitiesPage.tsx  RoomsPage.tsx
utils/: generate-hue-icons.py
wiki/: Deployment.md
