[package]
name = "bifrost-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
camino = { version = "1.1.9", features = ["serde", "serde1"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde"] }
serde_json = "1.0.140"

hue = { version = "0.1.0", path = "../hue", default-features = false, features = ["event"] }
svc = { version = "0.1.0", path = "../svc", default-features = false }

mac_address = { version = "1.1.8", optional = true }
log = { version = "0.4.27", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

[features]
default = []

mac = ["dep:mac_address"]
