[package]
name = "bifrost-frontend"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
bifrost-api = { version = "0.1.0", path = "../bifrost-api" }
hue = { version = "0.1.0", path = "../hue", default-features = false, features = ["event"] }
z2m = { version = "0.1.0", path = "../z2m" }

dioxus = { version = "0.6", features = ["router"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
futures-util = "0.3.31"
futures-channel = "0.3.31"
gloo-net = { version = "0.6.0", features = ["http", "json", "serde", "serde_json", "websocket"], default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = "0.4.40"
uuid = "1.16.0"
thiserror = { version = "2.0.12" }
url = "2.5.4"
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "html", "regex-fancy"] }
web-sys = { version = "0.3.77", default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
